--- a/chessapp/chess/templates/chess/chessboard.html
+++ b/chessapp/chess/templates/chess/chessboard.html
@@ -32,6 +32,7 @@
 .button {
   height: 50px;
   width: 225px;
+  border-radius: 3px 3px 3px 3px;
   padding: 15px 50px;
   text-align: center;
   text-decoration: none;
