Added reset to practice, fixed roomselect status

--- a/chessapp/chess/templates/chess/practiceboard.html
+++ b/chessapp/chess/templates/chess/practiceboard.html
@@ -194,6 +194,7 @@
   <div class="chessboard" id="chessboard"></div>
   <button type="button" class="button load-puzzle" id="load-puzzle-button" onclick="load_puzzle()">Load Puzzle</button>
   <button type="button" class="button view-solution" id="view-solution-button" onclick="open_modal()">View Solution</button>
+  <button type="button" class="button view-solution" id="view-solution-button" onclick="reset_board()">Reset Board</button>
   <!-- <img src="{{url_for('static', filename='images/linus.jpg')}}" -->
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
   <script src="{{ url_for('static', filename='js/chessboard-1.0.0.js') }}"></script>
