--- a/chessapp/chess/templates/chess/roomselect.html
+++ b/chessapp/chess/templates/chess/roomselect.html
@@ -14,15 +14,14 @@
             </div>
         </div>
         <div class="row" style="max-width: 80vw">
-            <!-- Single Product -->
             {% for chessboard in chessboards %}
             <div class="col-md-6 col-lg-4 col-xl-3" style="max-width: 250px;">
                 <div id="lobby-{{chessboard['id']}}" class="single-lobby">
                     <a href="{{url_for('chess_bp.chessboard', room=chessboard['id'])}}">
                         <div class="lobby-image">
                             <img 
-                            src="{{url_for('static', filename='images/linus.jpg')}}" 
-                            width="190" 
+                            src="{{url_for('static', filename='images/blackKnight.png')}}" 
+                            width="160" 
                             >
                         </div>
                         <div class="lobby-details">
@@ -42,16 +41,15 @@
                 </div>
             </div>
         </div>
-        <div class="row">
-            <!-- Single Product -->
+        <div class="row" style="max-width: 80vw">
             {% for practiceboard in practiceboards %}
-            <div class="col-md-6 col-lg-4 col-xl-3">
+            <div class="col-md-6 col-lg-4 col-xl-3" style="max-width: 250px;">
                 <div id="lobby-{{practiceboard['id']}}" class="single-lobby">
                     <a href="{{url_for('chess_bp.practiceboard', room=practiceboard['id'])}}">
                         <div class="lobby-image">
                             <img 
-                            src="{{url_for('static', filename='images/gunch.jpg')}}" 
-                            width="190" 
+                            src="{{url_for('static', filename='images/blackPawn.png')}}" 
+                            width="160" 
                             >
                         </div>
                         <div class="lobby-details">
